5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1798_2563.log
== SUBMITION (2019-06-05 15:27:06) 
-- CODE:
from numpy import*

vet = array(eval(input("vetor: ")))

while(size(vet) > 1):
	i = 0
	
	for elemento in vet: 
		if(elemento >= 5) and (elemento > 7):
	print(i)
	
	vet = array(eval(input("proximo vetor:")))
-- EXECUTION TIME:
0.561967
-- ERROR:
  File "/home/codebench/codes/1798/2563/main.py", line 10
    print(i)
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:27:17) 
-- CODE:
from numpy import*

vet = array(eval(input("vetor: ")))

while(size(vet) > 1):
	i = 0
	
	for elemento in vet: 
		if(elemento >= 5) and (elemento < 7):
	print(i)
	
	vet = array(eval(input("proximo vetor:")))
-- EXECUTION TIME:
0.740618
-- ERROR:
  File "/home/codebench/codes/1798/2563/main.py", line 10
    print(i)
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:27:52) 
-- CODE:
from numpy import*

vet = array(eval(input("vetor: ")))

#verificar se vai terminar
while(size(vet) > 1):
	i = 0
	
	for elemento in vet: 
		if(elemento >= 5) and (elemento < 7):
			i = i + 1
	print(i)
	
	vet = array(eval(input("proximo vetor:")))
-- EXECUTION TIME:
0.966862
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
